--- a/app/src/main/res/layout/optionsscreen.xml
+++ b/app/src/main/res/layout/optionsscreen.xml
@@ -23,16 +23,21 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="261dp"
         android:text="@string/popular"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="247dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toSignUp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="213dp"
         android:layout_height="172dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.212"
@@ -42,18 +47,16 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="216dp"
-            android:layout_height="168dp"
-            android:padding="4dp">
+            android:layout_height="168dp">
 
             <ImageView
                 android:id="@+id/header_image"
-                android:layout_width="185dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="215dp"
+                android:layout_height="85dp"
+                android:layout_marginEnd="1dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/fooddrivepic"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -61,42 +64,45 @@
                 android:id="@+id/title"
                 android:layout_width="164dp"
                 android:layout_height="17dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="36dp"
                 android:text="Nashville Rescue Mission"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="89dp" />
+                app:layout_constraintTop_toBottomOf="@+id/header_image" />
 
             <TextView
                 android:id="@+id/location"
                 android:layout_width="103dp"
-                android:layout_height="21dp"
+                android:layout_height="13dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="96dp"
                 android:text="250 Bradyville Pike"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="110dp" />
+                app:layout_constraintTop_toBottomOf="@+id/title" />
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="101dp"
                 android:layout_height="12dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginEnd="100dp"
                 android:text="Tuesday, October 10"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="123dp" />
+                app:layout_constraintTop_toBottomOf="@+id/location" />
 
             <TextView
                 android:id="@+id/time"
-                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="141dp"
                 android:layout_height="19dp"
+                android:layout_marginEnd="60dp"
                 android:text="12:00pm - 3:00pm"
                 android:textSize="10sp"
-                tools:layout_editor_absoluteX="11dp"
-                tools:layout_editor_absoluteY="139dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/date" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -104,95 +110,108 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="202dp"
         android:text="@string/happening"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="467dp" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 
     <Button
         android:id="@+id/toSignUp"
         android:layout_width="114dp"
         android:layout_height="45dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/featured"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="142dp" />
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/city_id" />
 
 
     <Button
         android:id="@+id/button3"
         android:layout_width="114dp"
         android:layout_height="45dp"
+        android:layout_marginTop="142dp"
+        android:layout_marginEnd="75dp"
         android:text="@string/feed"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="142dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="213dp"
         android:layout_height="172dp"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="501dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="156dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="4dp">
+            android:layout_height="match_parent">
+
 
             <ImageView
                 android:id="@+id/header_image2"
-                android:layout_width="185dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="216dp"
+                android:layout_height="81dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/fooddrivepic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <TextView
                 android:id="@+id/title2"
                 android:layout_width="164dp"
                 android:layout_height="17dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="36dp"
                 android:text="Nashville Rescue Mission"
                 android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="89dp" />
+                app:layout_constraintTop_toBottomOf="@+id/header_image2" />
 
             <TextView
                 android:id="@+id/location2"
-                android:layout_width="103dp"
-                android:layout_height="21dp"
+                android:layout_width="100dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="96dp"
                 android:text="250 Bradyville Pike"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="110dp" />
+                app:layout_constraintTop_toBottomOf="@+id/title2" />
 
             <TextView
                 android:id="@+id/date2"
                 android:layout_width="101dp"
                 android:layout_height="12dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginEnd="100dp"
                 android:text="Tuesday, October 10"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="123dp" />
+                app:layout_constraintTop_toBottomOf="@+id/location2" />
 
             <TextView
                 android:id="@+id/time2"
                 style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="141dp"
                 android:layout_height="19dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="61dp"
                 android:text="12:00pm - 3:00pm"
                 android:textSize="10sp"
-                tools:layout_editor_absoluteX="11dp"
-                tools:layout_editor_absoluteY="139dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/date2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
