--- a/app/src/main/res/layout/calendarscreen.xml
+++ b/app/src/main/res/layout/calendarscreen.xml
@@ -3,19 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/toOptionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/back_to_options"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textStyle="italic"
+        app:backgroundTint="@color/blue" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="414dp"
-        android:layout_height="383dp"
-        android:layout_weight="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:minDate="01012023"
         android:maxDate="01012032"
         android:background="@color/white"/>
 
-
+    <ListView
+        android:id="@+id/eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 </LinearLayout>
