--- a/app/src/main/res/layout/optionsscreen.xml
+++ b/app/src/main/res/layout/optionsscreen.xml
@@ -121,27 +121,40 @@
 
 
     <Button
-        android:id="@+id/toSignUp"
-        android:layout_width="114dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="12dp"
-        android:text="@string/featured"
-        app:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/city_id" />
-
-
-    <Button
         android:id="@+id/button3"
         android:layout_width="114dp"
         android:layout_height="45dp"
-        android:layout_marginTop="142dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/feed"
-        app:backgroundTint="#4C4B4B"
+        app:backgroundTint="@color/gray"
+        app:layout_constraintEnd_toStartOf="@+id/calendarButton"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/toSignUp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/calendarButton"
+        android:layout_width="114dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/calendar"
+        app:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/toSignUp"
+        android:layout_width="114dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="29dp"
+        android:text="@string/featured"
+        app:backgroundTint="@color/blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/city_id" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
