--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="280dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="34sp"
@@ -64,7 +65,6 @@
         android:text="@string/password"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:inputType="textPassword"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_ET" />
