--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -35,9 +35,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:ems="10"
         android:hint="@string/enter_password"
-        android:inputType="text"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTV" />
 
@@ -58,10 +59,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:layout_marginStart="44dp"
         android:ems="10"
         android:hint="@string/enter_valid_password"
-        android:inputType="text"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTV" />
 
@@ -98,6 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:layout_marginStart="44dp"
         android:ems="10"
         android:hint="@string/enter_full_name"
@@ -112,6 +115,7 @@
         android:layout_marginStart="44dp"
         android:ems="10"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:hint="@string/enter_valid_email"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
